[tool.poetry]
name = "sprint2"
version = "0.1.0"
description = "Scheduler"
authors = ["Stanley Kudrow <stankudrow@reply.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
ruff = "^0.4.2"
freezegun = "^1.5.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-random-order = "^1.1.1"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
